create default landing page and application start point

--- a/EstateManagementUI/Pages/Index.cshtml
+++ b/EstateManagementUI/Pages/Index.cshtml
@@ -1,10 +1,59 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Welcome";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">Estate Management and Administration</h1>
+    <p class="lead">Manage your estate, merchants and transactions with ease.</p>
+</div>
+
+<div class="card-group">
+    <div class="card text-center">
+            <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Estates</h4>
+            </div>
+            <div class="card-body">
+                <ul class="list-unstyled mt-3 mb-4">
+                    <li>Manage estate details</li>
+                    <li>Manage estate users</li>
+                    <li>Operator Management</li>
+                    <li>Contract Management</li>
+                    <li>&nbsp;</li>
+                </ul>
+                <button type="button" class="btn btn-lg btn-block btn-primary">Learn More</button>
+            </div>
+        </div>
+        <div class="card text-center">
+        <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Merchants</h4>
+        </div>
+        <div class="card-body">
+            <ul class="list-unstyled mt-3 mb-4">
+                <li>Manage Merchant Details</li>
+                <li>Merchant Configuration</li>
+                <li>Balance Management</li>
+                <li>Fee Management</li>
+                <li>&nbsp;</li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-primary">Learn More</button>
+        </div>
+        </div>
+    <div class="card text-center">
+        <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Transaction Processing</h4>
+        </div>
+        <div class="card-body">
+                
+            <ul class="list-unstyled mt-3 mb-4">
+                <li>Transaction Enquiry</li>
+                <li>Transaction Reports</li>
+                <li>Settlement Processing</li>
+                <li>Bulk Transaction Files</li>
+                <li>&nbsp;</li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-primary">Learn More</button>
+        </div>
+    </div>
 </div>
