--- a/EstateManagementUI/wwwroot/css/site.css
+++ b/EstateManagementUI/wwwroot/css/site.css
@@ -19,4 +19,11 @@ html {
 
 body {
   margin-bottom: 60px;
+  background-color: ghostwhite
+}
+
+/* My Custom CSS below here */
+
+.card {
+    margin-right: 20px !important;
 }
