added hydro stack

--- a/EstateManagementUI/Pages/Dashboard/Index.cshtml
+++ b/EstateManagementUI/Pages/Dashboard/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@page
 @model EstateManagementUI.Pages.Contract.IndexModel
 @{
+    ViewData["Title"] = "Dashboard";
+    Layout = "_Layout";
 }
 <p>Dashboard Main Page</p>
