--- a/EstateManagementUI/Pages/Index.cshtml
+++ b/EstateManagementUI/Pages/Index.cshtml
@@ -2,6 +2,7 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Welcome";
+    Layout = "_LayoutLandingPage";
 }
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
