--- a/EstateManagementUI/Pages/Shared/_LayoutLandingPage.cshtml
+++ b/EstateManagementUI/Pages/Shared/_LayoutLandingPage.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body>
 <header>
-    @await Html.PartialAsync("_Navigation")
+    <hydro name="LoginButton"/>
 </header>
     <div class="container">
         <main role="main" class="pb-3">
