--- a/EstateManagementUI/Pages/_ViewImports.cshtml
+++ b/EstateManagementUI/Pages/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using EstateManagementUI
 @namespace EstateManagementUI.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Hydro
+@addTagHelper *, EstateManagementUI
