added basic startpoint for authentication

--- a/EstateManagementUI/Pages/Dashboard/Index.cshtml
+++ b/EstateManagementUI/Pages/Dashboard/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model EstateManagementUI.Pages.Contract.IndexModel
+@model EstateManagementUI.Pages.Dashboard.IndexModel
 @{
     ViewData["Title"] = "Dashboard";
     Layout = "_Layout";
