--- a/EstateManagementUI/Pages/Merchant/Index.cshtml
+++ b/EstateManagementUI/Pages/Merchant/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model EstateManagementUI.Pages.Contract.IndexModel
+@model EstateManagementUI.Pages.Merchant.IndexModel
 @{
 }
 <p>Merchant Main Page</p>
