--- a/EstateManagementUI/Pages/Estate/Index.cshtml
+++ b/EstateManagementUI/Pages/Estate/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model EstateManagementUI.Pages.Contract.IndexModel
+@model EstateManagementUI.Pages.Estate.IndexModel
 @{
 }
 <p>Estate Main Page</p>
