--- a/EstateManagementUI/Pages/FileProcessing/Index.cshtml
+++ b/EstateManagementUI/Pages/FileProcessing/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model EstateManagementUI.Pages.Contract.IndexModel
+@model EstateManagementUI.Pages.FileProcessing.IndexModel
 @{
 }
 <p>File Processing Main Page</p>
