--- a/EstateManagementUI/Pages/Operator/Index.cshtml
+++ b/EstateManagementUI/Pages/Operator/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model EstateManagementUI.Pages.Contract.IndexModel
+@model EstateManagementUI.Pages.Operator.IndexModel
 @{
 }
 <p>Operator Main Page</p>
