--- a/EstateManagementUI/Pages/Reporting/Index.cshtml
+++ b/EstateManagementUI/Pages/Reporting/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model EstateManagementUI.Pages.Contract.IndexModel
+@model EstateManagementUI.Pages.Reporting.IndexModel
 @{
 }
 <p>Reporting Main Page</p>
