--- a/EstateManagementUI/Pages/Shared/_SubNavigation.cshtml
+++ b/EstateManagementUI/Pages/Shared/_SubNavigation.cshtml
@@ -45,16 +45,9 @@
         </a>
     }
 }
-<ul class="nav sidebar-menu flex-column" data-lte-toggle="treeview" role="menu" data-accordion="false">
-<li class="nav-item menu-open">
-    @{
-        await RenderItem("Dashboard", "Dashboard");
-        await RenderItem("My Estate", "Estate");
-        await RenderItem("My Merchants", "Merchant");
-        await RenderItem("My Contracts", "Contract");
-        await RenderItem("My Operators", "Operator");
-        await RenderItem("Reports", "Reporting");
-        await RenderItem("FileProcessing", "File Processing");
-    }
-</li>
-</ul>
+<ul class="navbar-nav">
+    <li class="nav-item"> <a class="nav-link" data-lte-toggle="sidebar" href="#" role="button"> <i class="bi bi-list"></i> </a> </li>
+    <li class="nav-item d-none d-md-block"> <a href="#" class="nav-link">Home</a> </li>
+    <li class="nav-item d-none d-md-block"> <a href="#" class="nav-link">Contact</a> </li>
+    <li class="nav-item d-none d-md-block"> <a href="#" class="nav-link">test</a> </li>
+</ul> <!--end::Start Navbar Links--> <!--begin::End Navbar Links-->
