--- a/EstateManagementUI/Pages/Estate/Index.cshtml
+++ b/EstateManagementUI/Pages/Estate/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@page
 @model EstateManagementUI.Pages.Estate.IndexModel
 @{
+    ViewData["Title"] = "View Estate";
+    Layout = "_Layout";
 }
-<p>Estate Main Page</p>
+
+<hydro name="ViewEstate" />
