added first end to end test (hopefully)

--- a/EstateManagementUI/Pages/Shared/Components/LoginButton.cshtml
+++ b/EstateManagementUI/Pages/Shared/Components/LoginButton.cshtml
@@ -1,4 +1,4 @@
 ﻿@model LoginButton
 <div class="bg-base-200 rounded p-4 m-8" style="text-align:right">
-    <button class="btn btn-primary mx-2" hydro-on:click="@(() => Model.LogIn())">Log In</button>
+    <button class="btn btn-primary mx-2" hydro-on:click="@(() => Model.LogIn())" id="loginButton">Log In</button>
 </div>
