Merchant List screen added with test

--- a/EstateManagementUI/Pages/Merchant/Index.cshtml
+++ b/EstateManagementUI/Pages/Merchant/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@page
 @model EstateManagementUI.Pages.Merchant.IndexModel
+
 @{
+    ViewData["Title"] = "View Merchants";
+    Layout = "_Layout";
 }
-<p>Merchant Main Page</p>
+
+<hydro name="MerchantsList" />
