--- a/EstateManagementUI/Pages/Shared/_Layout.cshtml
+++ b/EstateManagementUI/Pages/Shared/_Layout.cshtml
@@ -214,7 +214,7 @@
     </div>
     <div class="app-content">
         <!--begin::Container-->
-        <div class="container-fluid">
+                <div class="container-fluid" style="border-style: none;  border-color:green;">
             @RenderBody()
         </div> <!--end::Container-->
     </div> <!--end::App Content-->
