--- a/EstateManagementUI/Pages/Shared/_Navigation.cshtml
+++ b/EstateManagementUI/Pages/Shared/_Navigation.cshtml
@@ -9,13 +9,13 @@
             ? "btn btn-sm btn-neutral btn-active"
             : "btn btn-sm btn-ghost";
 
-    async Task RenderItem(string title, string name)
+    async Task RenderItem(string title, string name, String id)
     {
         // <a asp-page="/@name/Index" class="@GetCurrentPageClass(name)">
         //     <partial name="Loading"/>
         //     @title
         // </a>
-        <a class='nav-link' asp-page="/@name/Index">
+        <a class='nav-link' asp-page="/@name/Index" id="@id">
             @switch (name)
             {
                 case "Estate":
@@ -48,13 +48,13 @@
 <ul class="nav sidebar-menu flex-column" data-lte-toggle="treeview" role="menu" data-accordion="false">
 <li class="nav-item menu-open">
     @{
-        await RenderItem("Dashboard", "Dashboard");
-        await RenderItem("My Estate", "Estate");
-        await RenderItem("My Merchants", "Merchant");
-        await RenderItem("My Contracts", "Contract");
-        await RenderItem("My Operators", "Operator");
-        await RenderItem("Reports", "Reporting");
-        await RenderItem("FileProcessing", "File Processing");
+        await RenderItem("Dashboard", "Dashboard","dashboardLink");
+            await RenderItem("My Estate", "Estate", "estateDetailsLink");
+            await RenderItem("My Merchants", "Merchant", "merchantsLink");
+            await RenderItem("My Contracts", "Contract", "contractsLink");
+            await RenderItem("My Operators", "Operator", "operatorsLink");
+        await RenderItem("Reports", "Reporting","reportingLink");
+        await RenderItem("FileProcessing", "File Processing", "fileProcessingLink");
     }
 </li>
 </ul>
