Added operator list functionality

--- a/EstateManagementUI/Pages/Estate/ViewEstate.cshtml
+++ b/EstateManagementUI/Pages/Estate/ViewEstate.cshtml
@@ -11,10 +11,10 @@
                         </div>
                         <form id="estateForm">
                             <div class="form-group">
-                                <label asp-for="Name" class="control-label">Name</label>
-                                <input asp-for="Name" hydro-bind readonly="true" class="form-control form-control-user" placeholder="Estate Name" required autofocus />
-                                <label asp-for="Reference" class="control-label">Reference</label>
-                                <input asp-for="Reference" hydro-bind readonly="true" class="form-control form-control-user" placeholder="Estate Reference" required autofocus />
+                                <label asp-for="Estate.Name" class="control-label">Name</label>
+                                <input asp-for="Estate.Name" hydro-bind readonly="true" class="form-control form-control-user" placeholder="Estate Name" required autofocus />
+                                <label asp-for="Estate.Reference" class="control-label">Reference</label>
+                                <input asp-for="Estate.Reference" hydro-bind readonly="true" class="form-control form-control-user" placeholder="Estate Reference" required autofocus />
                             </div>
                         </form>
                     </div>
