Contract list added

--- a/EstateManagementUI/Pages/Contract/Index.cshtml
+++ b/EstateManagementUI/Pages/Contract/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@page
 @model EstateManagementUI.Pages.Contract.IndexModel
 @{
+    ViewData["Title"] = "View Contracts";
+    Layout = "_Layout";
 }
-<p>Contract Main Page</p>
+
+<hydro name="ContractsList" />
