Hard coded permissions added

--- a/EstateManagementUI/Pages/Shared/_Layout.cshtml
+++ b/EstateManagementUI/Pages/Shared/_Layout.cshtml
@@ -216,7 +216,9 @@
         <!--begin::Container-->
                 <div class="container-fluid" style="border-style: none;  border-color:green;">
             @RenderBody()
-        </div> <!--end::Container-->
+
+                    <hydro name="Toasts" />
+                </div> <!--end::Container-->
     </div> <!--end::App Content-->
 </main> <!--end::App Main--> <!--begin::Footer-->
 <footer class="app-footer">
