--- a/EstateManagementUI/Pages/Dashboard/_SubNavigation.cshtml
+++ b/EstateManagementUI/Pages/Dashboard/_SubNavigation.cshtml
@@ -1,5 +1,4 @@
-﻿<ul class="navbar-nav">
+﻿
+<ul class="navbar-nav">
     <li class="nav-item"> <a class="nav-link" data-lte-toggle="sidebar" href="#" role="button"> <i class="bi bi-list"></i> </a> </li>
-    <li class="nav-item d-none d-md-block"> <a href="#" class="nav-link">test</a> </li>
-    <li class="nav-item d-none d-md-block"> <a href="#" class="nav-link">test1</a> </li>
 </ul> <!--end::Start Navbar Links--> <!--begin::End Navbar Links-->
