wip permisison management screens

--- a/EstateManagementUI/Pages/Shared/_LayoutLandingPage.cshtml
+++ b/EstateManagementUI/Pages/Shared/_LayoutLandingPage.cshtml
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/EstateManagementUI.styles.css" asp-append-version="true" />
     <meta name="hydro-config" />
-    <script defer src="~/hydro/hydro.js" asp-append-version="true"></script>
-    <script defer src="~/hydro/alpine.js" asp-append-version="true"></script>
 </head>
 <body>
 <header>
@@ -27,10 +25,15 @@
         </div>
     </footer>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script defer src="~/hydro/hydro.js" asp-append-version="true"></script>
+<script defer src="~/hydro/alpine.js" asp-append-version="true"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/adminlte.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
 
-    @await RenderSectionAsync("Scripts", required: false)
+
+
+    @* @await RenderSectionAsync("Scripts", required: false) *@
 </body>
 </html>
