permission management added

--- a/EstateManagementUI/Pages/PermissionManagement/Roles/Edit.cshtml
+++ b/EstateManagementUI/Pages/PermissionManagement/Roles/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id}"
 @model EstateManagementUI.Pages.PermissionManagement.Roles.Edit
 @{
-    ViewData["Title"] = "View Estate";
+    ViewData["Title"] = "Edit Role Permissions";
     Layout = "_LayoutLandingPage";
 }
 
