--- a/EstateManagementUI/Pages/PermissionManagement/Roles/Index.cshtml
+++ b/EstateManagementUI/Pages/PermissionManagement/Roles/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model EstateManagementUI.Pages.PermissionManagement.Roles.IndexModel
 @{
-    ViewData["Title"] = "View Estate";
+    ViewData["Title"] = "Application Roles";
     Layout = "_LayoutLandingPage";
 }
 
