--- a/EstateManagementUI/Pages/PermissionManagement/Index.cshtml
+++ b/EstateManagementUI/Pages/PermissionManagement/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model EstateManagementUI.Pages.PermissionManagement.IndexModel
 @{
-    ViewData["Title"] = "View Estate";
+    ViewData["Title"] = "Manage Permissions";
     Layout = "_LayoutLandingPage";
 }
 
