--- a/EstateManagementUI/Pages/PermissionManagement/Roles/RoleList/RoleList.Table.cshtml
+++ b/EstateManagementUI/Pages/PermissionManagement/Roles/RoleList/RoleList.Table.cshtml
@@ -6,7 +6,7 @@
     <thead class="thead-light">
         <tr class="d-flex">
             <th class="col-3">Role Name</th>
-            <th class="col-1"></th>
+            <th class="col-3"></th>
         </tr>
     </thead>
     <tbody>
@@ -19,11 +19,12 @@
                     @* <span class="spinner-border spinner-border-sm spinner" aria-hidden="true"></span> *@
                 </a>
             </td>
-            <td class="align-middle text-end">
+            <td class="align-middle text-end col-3">
                 @{
                     TableDropdownItem[] menuItems = new TableDropdownItem[]
                     {
-                        new("Edit", () => Model.Edit(@roleModel.Id))
+                        new("Edit", () => Model.Edit(@roleModel.Id)),
+                        new("Edit Users", () => Model.EditUsers(@roleModel.Id))
                     };
                 }
 
