--- a/EstateManagementUI/Pages/Shared/_LayoutLandingPage.cshtml
+++ b/EstateManagementUI/Pages/Shared/_LayoutLandingPage.cshtml
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Estate Management</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" /> *@
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/EstateManagementUI.styles.css" asp-append-version="true" />
     <meta name="hydro-config" />
@@ -13,12 +14,12 @@
 <header>
     <hydro name="LoginButton"/>
 </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-
+<div class="container">
+        <hydro name="Toasts" />
+    <main role="main" class="pb-3">
+        @RenderBody()
+    </main>
+</div>
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2024 - EstateManagementUI - <a asp-area="" asp-page="/Privacy">Privacy</a>
@@ -27,8 +28,10 @@
 
     <script defer src="~/hydro/hydro.js" asp-append-version="true"></script>
 <script defer src="~/hydro/alpine.js" asp-append-version="true"></script>
-<script src="~/lib/jquery/dist/jquery.min.js"></script>
-<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    @* <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script> *@
+@* <script src="~/lib/jquery/dist/jquery.min.js"></script> *@
+
     <script src="~/js/adminlte.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 
