--- a/EstateManagementUI/Pages/Merchant/MerchantsList.cshtml
+++ b/EstateManagementUI/Pages/Merchant/MerchantsList.cshtml
@@ -19,7 +19,7 @@
                         }
                         else
                         {
-                            <partial name="MerchantList.Table"/>
+                            <partial name="MerchantList.Table.cshtml"/>
                         }
                     </div>
                 </div>
