--- a/EstateManagementUI/Pages/Contract/ContractsList.cshtml
+++ b/EstateManagementUI/Pages/Contract/ContractsList.cshtml
@@ -19,7 +19,7 @@
                         }
                         else
                         {
-                            <partial name="ContractList.Table"/>
+                            <partial name="ContractList.Table.cshtml"/>
                         }
                     </div>
                 </div>
