--- a/EstateManagementUI/Pages/Operator/OperatorsList.cshtml
+++ b/EstateManagementUI/Pages/Operator/OperatorsList.cshtml
@@ -19,7 +19,7 @@
                         }
                         else
                         {
-                            <partial name="OperatorList.Table"/>
+                            <partial name="OperatorList.Table.cshtml"/>
                         }
                     </div>
                 </div>
